JH-135 endpoint for user deactivation (#200)
