# service-jehlomat/src/main/resources/files/swagger.yaml
@@ -471,6 +471,25 @@ paths:
             $ref: '#/definitions/UserInfo'
         '404':
           description: User not found
+    delete:
+      summary: Deactivate user by id
+      produces:
+        - application/json
+      security:
+        - Bearer: [ ]
+      parameters:
+        - name: id
+          in: path
+          description: Id of user to deactivate
+          required: true
+          type: integer
+      responses:
+        '204':
+          description: successful operation
+        '400':
+          description: User is not active
+        '404':
+          description: User not found
   /user:
     get:
       summary: Get a detail about a current user
@@ -691,9 +710,12 @@ definitions:
       username:
         type: string
         example: FrantaPepa1
-      verified:
-        type: boolean
-        default: false
+      status:
+        type: string
+        enum:
+          - NOT_VERIFIED
+          - ACTIVE
+          - DEACTIVATED
       organizationId:
         type: integer
         example: 0
